--- a/index.yaml
+++ b/index.yaml
@@ -39,7 +39,7 @@ config:
         autoExecute: false
         buttonLabel: Execute Commands
 backend:
-    service: k8s
+    service: MOCK-SERVICE
 tileInfo:
     - title: 1. MariaDB Operator installation verification
       description:
